Breaking changes: mermaid support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,6 +48,18 @@
     </script>
     {% endif %}
 
+    <!-- Mermaid -->
+    {% if site.enable_mermaid %}
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
+    <script>
+        mermaid.initialize({
+            startOnLoad: true,
+            theme: 'default',
+            securityLevel: 'loose'
+        });
+    </script>
+    {% endif %}
+
     <!-- Verifications -->
     {% if site.google_verification %}
       <meta name="google-site-verification" content="{{ site.google_verification }}" />
